# GameOfLife

./: CMakeLists.txt
src/: AlwaysNextTurn.cpp  CommandSource.hpp  GameOfLife.cpp  GameOfLife.hpp  main.cpp
